--- a/ASCEND 3/ASCEND 3/ascend-ui/mentor-sidebar.html
+++ b/ASCEND 3/ASCEND 3/ascend-ui/mentor-sidebar.html
@@ -18,7 +18,7 @@
             <i data-lucide="map" style="width: 20px; height: 20px; stroke-width: 1.5;"></i>
             <span>My Roadmaps</span>
         </a>
-        <a href="mentees.html" class="sidebar-nav-item">
+        <a href="mentor-mentees.html" class="sidebar-nav-item">
             <i data-lucide="users" style="width: 20px; height: 20px; stroke-width: 1.5;"></i>
             <span>My Mentees</span>
         </a>
