--- a/ASCEND 3/ASCEND 3/ascend-ui/mentor-profile.html
+++ b/ASCEND 3/ASCEND 3/ascend-ui/mentor-profile.html
@@ -30,26 +30,21 @@
     <!-- Header -->
     <header class="header">
         <div class="dashboard-nav-group">
-            <a href="mentor-dashboard.html" class="sidebar-nav-item">
-                <i data-lucide="layout-dashboard" style="width: 18px; height: 18px; stroke-width: 2;"></i>
-                <span>Dashboard</span>
-            </a>
-            <a href="contact.html" class="sidebar-nav-item ">
-                <i data-lucide="mail" style="width: 18px; height: 18px; stroke-width: 2;"></i>
-                <span>Contact Us</span>
-            </a>
-            <a href="about.html" class="sidebar-nav-item ">
-                <i data-lucide="info" style="width: 18px; height: 18px; stroke-width: 2;"></i>
-                <span>About Us</span>
-            </a>
+            <!-- Nav links removed as per request -->
         </div>
 
-        <div class="header-user" onclick="window.location.href='mentor-profile.html'" style="cursor: pointer;">
-            <div class="header-user-info">
-                <div class="header-user-name">Mentor Name</div>
-                <div class="header-user-role">Mentor</div>
+        <div style="display: flex; align-items: center; gap: 1.5rem;">
+            <button onclick="window.location.href='mentor-messages.html'"
+                style="background: none; border: none; color: var(--text-secondary); cursor: pointer; padding: 0.5rem; display: flex; align-items: center; transition: color 0.2s;">
+                <i data-lucide="message-square" style="width: 20px; height: 20px;"></i>
+            </button>
+            <div class="header-user" onclick="window.location.href='mentor-profile.html'" style="cursor: pointer;">
+                <div class="header-user-info">
+                    <div class="header-user-name">Mentor Name</div>
+                    <div class="header-user-role">Mentor</div>
+                </div>
+                <div class="avatar avatar-md">ME</div>
             </div>
-            <div class="avatar avatar-md">ME</div>
         </div>
     </header>
 
