--- a/ASCEND 3/ASCEND 3/ascend-ui/mentor-question-detail.html
+++ b/ASCEND 3/ASCEND 3/ascend-ui/mentor-question-detail.html
@@ -79,6 +79,10 @@
         </div>
 
         <div class="header-actions">
+            <button onclick="window.location.href='mentor-messages.html'"
+                style="background: none; border: none; color: var(--text-secondary); cursor: pointer; padding: 0.5rem; display: flex; align-items: center; transition: color 0.2s; margin-right: 0.5rem;">
+                <i data-lucide="message-square" style="width: 20px; height: 20px;"></i>
+            </button>
             <button class="btn btn-secondary btn-sm">
                 <i data-lucide="bell" style="width: 18px; height: 18px; stroke-width: 1.5;"></i>
             </button>
