--- a/ASCEND 3/ASCEND 3/ascend-ui/mentor-roadmaps.html
+++ b/ASCEND 3/ASCEND 3/ascend-ui/mentor-roadmaps.html
@@ -223,7 +223,7 @@
                                         <span><i data-lucide="user" style="width: 14px; height: 14px; display: inline; vertical-align: middle;"></i> ${r.creator || 'Me'}</span>
                                     </div>
 
-                                    <button class="btn btn-secondary btn-sm" onclick="window.location.href='roadmap-detail.html?id=${r.id}'">View Details</button>
+                                    <button class="btn btn-secondary btn-sm" onclick="window.location.href='mentor-roadmap-detail.html?id=${r.id}'">View Details</button>
                                 </div>
                             </div>
                         `;
